src/components/nav.css
:root {
  --internal-nav-height: 4rem;
}

nav {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 1rem;
  padding: 0;

  /* Strong as the first item = add some layout to support logo + text */
  strong:first-child {
    align-items: center;
    display: flex;
    gap: 0.75rem;
  }

  /* Nav list - vertical by default */
  ul {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 0.25rem;
    list-style-type: none;
    margin: 0 -0.75rem;
    padding: 0;

    li {
      flex: none;

      &:not(:has(a, hr, button)) {
        padding: 0.375rem 0.75rem;
      }

      hr:only-child {
        margin: 0.375rem 0;
      }

      :is(button, [role="button"]) {
        flex: none;
        padding: 0.375rem 0.75rem;
      }

      a {
        align-items: center;
        border-radius: var(--border-radius);
        font-weight: var(--font-weight-medium);
        display: inline-flex;
        gap: 0.75ch;
        padding: 0.375rem 0.75rem;
        text-decoration: none;

        &:focus-visible {
          outline-offset: var(--outline-inset);
          outline: var(--outline);
        }

        &[aria-current="true"],
        &[aria-current="location"],
        &[aria-current="page"] {
          background: var(--c-surface-variant-bg);
        }

        &:only-child {
          display: flex;
        }
      }
    }
  }

  /* In a header element: nav list is horizontal */
  header > & {
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
    white-space: nowrap;

    ul {
      align-items: center;
      flex-direction: row;

      li hr:only-child {
        border-top-width: 0;
        border-left-width: var(--border-width-large);
        height: 1.5em;
        margin: 0 0.375rem;
      }
    }

    &[align-left] {
      gap: 1.25rem;
      justify-content: flex-start;
    }

    &[fixed] {
      flex-wrap: nowrap;
      height: var(--internal-nav-height);
      margin-inline: auto;
      overflow: auto;
      padding: 0 max(var(--body-padding-x), 1rem);

      ul {
        flex-wrap: nowrap;
        margin: 0;
      }
    }

    &:not([fixed]) {
      margin-block: var(--outer-spacing-y);
    }
  }

  header:has(&[fixed]) {
    backdrop-filter: var(--backdrop-glass);
    background: var(--c-glass);
    border-bottom: var(--border-width) solid var(--c-border-variant);
    inset-inline: 0;
    position: fixed;
    top: 0;
    z-index: 10;
  }

  /* Automatically increase body padding if it has a fixed nav */
  body:has(&[fixed]) {
    padding-top: calc(var(--body-padding-y) + var(--internal-nav-height));
  }
}

